--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
     "name": "@rgb/tslib",
-    "version": "0.1.3",
-    "files": [
-        "dist"
-    ],
+    "version": "0.1.0",
+    "description": "",
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
     "typings": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "start": "craco start --config config/start.config.js",
         "build": "rollup --config && tsc --project tsconfig.types.json ",
         "pub": "npm publish --registry http://rgbtouch.cn:9999 --access public",
         "lint": "eslint ./src --fix",
-        "test": "react-scripts test",
+        "test": "jest",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -68,6 +69,7 @@
         "rollup-plugin-glslify": "^1.2.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
+        "ts-jest": "^27.1.3",
         "typescript": "^4.6.2",
         "web-vitals": "^2.1.4"
     },
