--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        // "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
         "baseUrl": "."
