--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
         "rollup": "^2.69.2",
+        "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-glslify": "^1.2.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
